--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,12 @@
   line-height: 1.5;
   font-weight: 400;
 }
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  width: 100%;
+}
 
 body {
   margin: 0;
